[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "forrest-of-doom"
version = "0.1.0"
description = "A small text adventure refactored into modules for testing and maintainability."
authors = ["Anthro-pod <dev@example.com>"]
packages = [{include = "forest_of_doom"}]
